[gd_scene load_steps=7 format=3 uid="uid://bw3kroc3btwcx"]

[ext_resource type="Script" path="res://Levels/level_selection/selection-screen.gd" id="1_qx3ul"]
[ext_resource type="Texture2D" uid="uid://dypb6jnklgekq" path="res://Art/UI/logo-clear-bkg.png" id="1_yhp6t"]
[ext_resource type="FontFile" uid="uid://du4865w68n0ud" path="res://castlevania-dracula-x-small-snes.ttf" id="2_5mr67"]
[ext_resource type="Texture2D" uid="uid://k56g53h8sfxs" path="res://Art/UI/title-bkg.png" id="4_ih2ob"]
[ext_resource type="StyleBox" uid="uid://qhm3ejxbdlqi" path="res://Levels/level_selection/ugly-button-style.tres" id="5_afe0n"]

[sub_resource type="Theme" id="Theme_vnof0"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 20
Button/fonts/font = ExtResource("2_5mr67")
Button/styles/normal = ExtResource("5_afe0n")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.995858, 0.99031)
script = ExtResource("1_qx3ul")

[node name="Title-bkg" type="Sprite2D" parent="."]
position = Vector2(345.431, 161.566)
scale = Vector2(0.215758, 0.215758)
texture = ExtResource("4_ih2ob")

[node name="Logo-clear-bkg" type="Sprite2D" parent="."]
visible = false
position = Vector2(224, 144)
scale = Vector2(0.187128, 0.187128)
texture = ExtResource("1_yhp6t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 8.03327
offset_top = -8.07828
offset_right = 278.033
offset_bottom = 200.922
scale = Vector2(0.983345, 1.4384)
theme = SubResource("Theme_vnof0")
theme_override_constants/separation = 15

[node name="SingleplayerBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Singleplayer"

[node name="MultiplayerBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="SettingsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ExitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/SingleplayerBtn" to="." method="_on_singleplayer_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/MultiplayerBtn" to="." method="_on_multiplayer_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
